<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_EL3174" Id="{dcd9c770-78d5-4af2-8a98-6bb64e72cc4f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    (* Analog scaling *)
    fRawUpperLimit : LREAL := 16#7736; // Highest raw signal that can be read
    fRawLowerLimit : LREAL := 16#0000; // Lowest raw signal that can be read
    fScaleUpperLimit : LREAL := 300.0; // Upper limit in L/min
    fScaleLowerLimit : LREAL := 0.0; // Lower limit in L/min
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>